injection into concatenation